<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/adding_fragment_dialog_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background_shape">

    <RelativeLayout
        android:id="@+id/adding_fragment_dialog_heading_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/adding_fragment_dialog_heading_text"
            style="@style/MaterialAlertDialog.Material3.Title.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/adding_fragment_dialog_heading_delete_button"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/adding_fragment_dialog_heading_placeholder"
            android:textAlignment="center" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/adding_fragment_dialog_heading_delete_button"
            style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@color/md_theme_light_errorContainer"
            android:contentDescription="@string/delete_item_button_description"
            app:icon="@drawable/delete_icon"
            app:iconTint="@color/md_theme_light_error" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:divider="@drawable/adding_fragment_dialog_divider"
        android:orientation="vertical"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:showDividers="middle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/adding_fragment_dialog_heading_layout">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/adding_fragment_dialog_item_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/adding_fragment_dialog_item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/item_name_hint"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/adding_fragment_dialog_item_price_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/adding_fragment_dialog_item_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/item_price_hint"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal"
                    android:maxLength="10"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="6dp"
                android:layout_height="0dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/adding_fragment_dialog_item_amount_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/adding_fragment_dialog_item_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/item_amount_hint"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal"
                    android:maxLength="10"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/adding_fragment_dialog_cancel_button"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/cancel_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/adding_fragment_dialog_save_button"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/adding_fragment_dialog_save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saveButton"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>