...
    <string name="adding_category">Kategorie</string>
    <string name="adding_address">Straße</string>
    <string name="error_message_password_field_empty">Passwortfeld ist leer</string>
    <string name="error_message_email_field">Emailfeld ist leer</string>
    <string name="error_message_store_field">Gib bitte ein Geschäft an</string>
    <string name="error_message_source_field">Gib bitte eine Quelle an</string>
    <string name="error_message_price_field">Gib bitte einen Betrag an</string>
    <string name="error_message_amount_field">Gib bitte eine Anzahl an</string>
    <string name="error_message_name_field">Gib bitte einen Namen an</string>
    <string name="error_message_date_field">Gib ein bitte Datum an</string>
    <string name="error_message_category_field">Gib bitte eine Kategorie an</string>
    <string name="error_message_address_field">Gib bitte eine Addresse an</string>
    <string name="headline_itemlist_view">Artikelübersicht</string>

    <string name="time_message_date_picker">Uhrzeit auswählen</string>
...
