...
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/add_item_button"
                    style="@style/Widget.Material3.Button.IconButton.Filled"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/add_item_button_description"
                    app:icon="@drawable/plus_icon"
                    app:layout_constraintBottom_toBottomOf="parent"
...
                android:layout_marginBottom="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fourthLine_constraintLayout">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/adding_fragment_recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginEnd="16dp" />

...
